--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
-version: "3.8"
-
 services:
+
   backend:
     build:
       context: ./backend
@@ -11,8 +10,28 @@ services:
     env_file:
       - .env
     environment:
-      - DB_HOST=disabled
-      - DB_PORT=5432
-      - DB_USER=disabled
-      - DB_PASSWORD=disabled
-      - DB_NAME=disabled
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+    depends_on:
+      - db
+
+  db:
+    image: postgres:15
+    container_name: nextgoproject_postgres
+    restart: always
+    ports:
+      - "5432:5432"
+    env_file:
+      - .env
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+volumes:
+  pgdata:
