--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,22 @@
-FROM golang:1.20-alpine
+# Build
+FROM golang:1.20-alpine AS builder
 
 WORKDIR /app
 
-COPY go.mod .
+COPY go.mod ./
+COPY go.sum ./
 RUN go mod download
 
-COPY . .
+COPY . ./
 RUN go build -o backend ./main.go
 
+# Lighter image
+FROM alpine:latest
+
+WORKDIR /root/
+
+COPY --from=builder /app/backend .
+
 EXPOSE 8080
+
 CMD ["./backend"]
