--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       dockerfile: Dockerfile
     container_name: nextgoproject_backend
     ports:
-      - "8080:8080"
+      - "${PORT}:${PORT}"
     env_file:
       - .env
     environment:
@@ -15,6 +15,7 @@ services:
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_NAME=${DB_NAME}
+      - PORT=${PORT}
     depends_on:
       - db
 
