--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -9,21 +9,57 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    environment: development
+
+    services:
+      postgres:
+        image: postgres:15
+        ports:
+          - ${{ secrets.DB_PORT }}:${{ secrets.DB_PORT }}
+        env:
+          POSTGRES_USER: ${{ secrets.DB_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          POSTGRES_DB: ${{ secrets.DB_NAME }}
+        options: >-
+          --health-cmd="pg_isready -U ${{ secrets.DB_USER }}"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
+    env:
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: ${{ secrets.DB_PORT }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      PORT: ${{ vars.PORT }}
+
+    defaults:
+      run:
+        working-directory: ./backend
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Configure Go
+      - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.20'
 
+      - name: Verify Go version
+        run: go version
+
+      - name: Wait for DB
+        run: |
+          for i in {1..10}; do
+            pg_isready -h ${{ secrets.DB_HOST }} -p ${{ secrets.DB_PORT }} -U ${{ secrets.DB_USER }} && break
+            echo "Waiting for PostgreSQL..."
+            sleep 3
+          done
 
       - name: Install dependencies
         run: go mod tidy
-        working-directory: ./backend
 
       - name: Run tests
         run: go test ./...
-        working-directory: ./backend
