--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -11,17 +11,25 @@ jobs:
     runs-on: ubuntu-latest
     environment: development
 
+    env:
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_PORT: 5432
+      DB_HOST: localhost
+      PORT: ${{ vars.PORT }}
+
     services:
       postgres:
         image: postgres:15
         ports:
           - 5432:5432
         env:
-          POSTGRES_USER: ${{ secrets.DB_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          POSTGRES_DB: ${{ secrets.DB_NAME }}
+          POSTGRES_USER: $DB_USER
+          POSTGRES_PASSWORD: $DB_PASSWORD
+          POSTGRES_DB: $DB_NAME
         options: >-
-          --health-cmd="pg_isready -U ${{ secrets.DB_USER }}"
+          --health-cmd="pg_isready -U $DB_USER"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
@@ -39,36 +47,16 @@ jobs:
         with:
           go-version: '1.20'
 
-      - name: Verify Go version
-        run: go version
-
       - name: Wait for PostgreSQL
         run: |
           for i in {1..10}; do
-            pg_isready -h localhost -p 5432 -U $DB_USER && break
+            pg_isready -h $DB_HOST -p $DB_PORT -U $DB_USER && break
             echo "Waiting for PostgreSQL..."
             sleep 3
           done
-        env:
-          DB_USER: ${{ secrets.DB_USER }}
 
       - name: Install dependencies
         run: go mod tidy
-        env:
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_NAME: ${{ secrets.DB_NAME }}
-          DB_PORT: 5432
-          DB_HOST: localhost
-          PORT: ${{ vars.PORT }}
 
       - name: Run tests
         run: go test ./...
-        env:
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_NAME: ${{ secrets.DB_NAME }}
-          DB_PORT: 5432
-          DB_HOST: localhost
-          PORT: ${{ vars.PORT }}
-
