--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -12,12 +12,12 @@ jobs:
     environment: development
 
     env:
-      DB_USER: ${{ secrets.DB_USER }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      DB_NAME: ${{ secrets.DB_NAME }}
-      DB_PORT: ${{ secrets.DB_PORT }}
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_NAME: tasksdb
+      DB_PORT: 5432
       DB_HOST: localhost
-      PORT: ${{ vars.PORT }}
+      PORT: 8080
 
     services:
       postgres:
@@ -25,11 +25,11 @@ jobs:
         ports:
           - 5432:5432
         env:
-          POSTGRES_USER: ${DB_USER}
-          POSTGRES_PASSWORD: ${DB_PASSWORD}
-          POSTGRES_DB: ${DB_NAME}
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: tasksdb
         options: >-
-          --health-cmd="pg_isready -U ${DB_USER}"
+          --health-cmd="pg_isready -U postgres"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
@@ -50,7 +50,7 @@ jobs:
       - name: Wait for PostgreSQL
         run: |
           for i in {1..10}; do
-            pg_isready -h ${DB_HOST} -p ${DB_PORT} -U ${DB_USER} && break
+            pg_isready -h localhost -p 5432 -U postgres && break
             echo "Waiting for PostgreSQL..."
             sleep 3
           done
