--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -2,7 +2,7 @@ name: Backend CI
 
 on:
   push:
-    branches: [dev, main]
+    branches: [main]
   pull_request:
     branches: [dev, main]
 
@@ -47,10 +47,18 @@ jobs:
         with:
           go-version: '1.20'
 
+      - name: Static analysis (go vet)
+        run: go vet ./...
+
+      - name: Lint check (golint)
+        run: |
+          go install golang.org/x/lint/golint@latest
+          golint ./...
+
       - name: Wait for PostgreSQL
         run: |
           for i in {1..10}; do
-            pg_isready -h localhost -p 5432 -U postgres && break
+            pg_isready -h $DB_HOST -p $DB_PORT -U $DB_USER && break
             echo "Waiting for PostgreSQL..."
             sleep 3
           done
@@ -60,3 +68,12 @@ jobs:
 
       - name: Run tests
         run: go test ./...
+
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/nextgo-backend:latest .
+
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/nextgo-backend:latest
