--- a/.github/workflows/project-cd.yml
+++ b/.github/workflows/project-cd.yml
@@ -1,19 +1,22 @@
 name: Deploy to Render
 
 on:
-  push:
-    branches: [main]
+  workflow_run:
+    workflows: ["Full Project CI"]  # Nombre EXACTO del CI
+    types:
+      - completed
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     environment: production
 
     steps:
-      - name: Call Render deploy hook for backend
+      - name: Deploy backend on Render
         run: |
           curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_BACKEND }}
 
-      - name: Call Render deploy hook for frontend
+      - name: Deploy frontend on Render
         run: |
           curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_FRONTEND }}
