--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,6 +6,7 @@ COPY package*.json ./
 RUN npm install
 
 COPY postcss.config.js tailwind.config.js ./
+COPY .env .env
 COPY . .
 RUN npm run build
 
@@ -17,6 +18,7 @@ COPY --from=builder /app/public ./public
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/next.config.js ./next.config.js
 
 EXPOSE 3000
 CMD ["npm", "start"]
