--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@sentry/nextjs": "^9.20.0",
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
