--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,6 +9,8 @@ COPY package*.json ./
 RUN npm install
 
 COPY postcss.config.js tailwind.config.js ./
+COPY sentry.* ./
+COPY .env.sentry-build-plugin ./
 COPY . .
 RUN npm run build
 
@@ -21,6 +23,8 @@ COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/next.config.js ./next.config.js
+COPY --from=builder /app/sentry.* ./
+COPY --from=builder /app/.env.sentry-build-plugin ./
 
 EXPOSE 3000
 CMD ["npm", "start"]
