--- a/.github/workflows/project-cd.yml
+++ b/.github/workflows/project-cd.yml
@@ -9,18 +9,17 @@ on:
 jobs:
   deploy:
     if: >
-      ${{
-        github.event.workflow_run.conclusion == 'success' &&
-        github.event.workflow_run.head_branch == 'main'
-      }}
+      github.event.workflow_run.conclusion == 'success' &&
+      (
+        github.event.workflow_run.head_branch == 'main' ||
+        github.event.workflow_run.pull_requests[0].base.ref == 'main'
+      )
     runs-on: ubuntu-latest
     environment: production
 
     steps:
       - name: Deploy backend on Render
-        run: |
-          curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_BACKEND }}
+        run: curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_BACKEND }}
 
       - name: Deploy frontend on Render
-        run: |
-          curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_FRONTEND }}
+        run: curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_FRONTEND }}
