--- a/.github/workflows/project-ci-cd.yml
+++ b/.github/workflows/project-ci-cd.yml
@@ -92,7 +92,7 @@ jobs:
           docker push ${{ secrets.DOCKER_USERNAME }}/nextgo-frontend:latest
 
   deploy:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' || github.base_ref == 'main'
     runs-on: ubuntu-latest
     needs: build-and-push
     environment: production
